save dictionary in batch; fix exporting to tsv